refactor: replace get(0) with getFirst() for improved readability and consistency
Signed-off-by: Balázs Szücs <bszucs1209@gmail.com>